--- a/docs/style.css
+++ b/docs/style.css
@@ -53,8 +53,8 @@ a {
   padding: 12px 0;
 }
 
-.logo img {
-  height: 50px;
+.header .logo img {
+  height: 4em;
 }
 
 .cta {
@@ -138,7 +138,7 @@ a {
   width: 80%;
   height: auto;
   object-fit: contain;
-  border-radius: 5%;
+  border-radius: 10px;
 }
 
 /* Seções */
@@ -392,7 +392,7 @@ button.primary {
 
   .logo img {
     height: auto;
-    max-height: 42px;
+    max-height: 60px;
     max-width: 100%;
   }
 
